--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "select": "^1.1.2",
     "sharp": "^0.30.4",
     "styled-components": "^5.3.5",
+    "swiper": "^8.4.3",
     "use-count-up": "^3.0.1",
     "uuid": "^8.3.2"
   },
