--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.11",
+    "@chakra-ui/react": "^2.3.5",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@syncfusion/ej2-react-calendars": "^20.1.47",
     "animated-scroll-to": "^2.2.0",
     "date-fns": "^2.28.0",
+    "framer-motion": "^7.5.3",
     "gulp": "^4.0.2",
     "gulp-less": "^5.0.0",
     "gulp-sass": "^5.1.0",
