--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "12.1.3",
     "npm": "^8.7.0",
     "react": "18.0.0",
+    "react-bootstrap": "^2.6.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.0.0",
     "react-elastic-carousel": "^0.11.5",
